# nbspec

./: .fable  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.auxiliary/configuration/: AGENTS.md  copier-answers--agents.yaml  mcp-servers.json  pre-commit.yaml
.auxiliary/configuration/coders/claude/: .gitignore  settings.json
.auxiliary/configuration/coders/codex/: .gitignore  config.toml
.auxiliary/configuration/coders/codex/rules/: emcd.rules
.auxiliary/configuration/coders/opencode/: .gitignore  settings.jsonc
.auxiliary/temporary/conformance-oracle/openspec/changes/conformance-fixtures/: proposal.md  tasks.md
.auxiliary/temporary/conformance-oracle/openspec/specs/retired-features/: spec.md
.github/workflows/: core--initializer.yaml  releaser.yaml  tester.yaml
documentation/agents/: nbspec.md  notebook.md  openspec.md  reviews.md
documentation/architecture/openspec/changes/add-nbspec-foundation/: design.md  proposal.md  tasks.md
documentation/architecture/openspec/changes/add-nbspec-foundation/specs/change-authoring/: spec.md
documentation/architecture/openspec/changes/add-nbspec-foundation/specs/materialization/: spec.md
documentation/architecture/openspec/changes/add-nbspec-foundation/specs/validation/: spec.md
documentation/archives/: add-clean-succession.tar.zst  add-comment-file.tar.zst  add-mcp-surface.tar.zst  add-review-verb.tar.zst
documentation/designs/: mcp-server-design.md  verdict-model.md
documentation/specifications/: mcp-tool-surface.md  review-gating.md  target-ownership.md
src/: archives.rs  changes.rs  cli.rs  configuration.rs  git_env.rs  grammar.rs  lib.rs  main.rs  merging.rs  operations.rs  provenance.rs  rendering.rs  reviews.rs  schemata.rs  validation.rs  worknotes.rs
src/mcp/: errors.rs  mod.rs  params.rs  server.rs
src/schemata/: default.toml  default.yaml
tests/conformance/: oracle.sh
tests/fixtures/conformance/deltas/: added-basics.md  modified-behavior.md  retired-features.md
tests/fixtures/conformance/specs/: modified-behavior.md
tests/integration/: harness.rs  lifecycle.rs  mcp_lifecycle.rs  mod.rs
tests/unit/: archives.rs  changes.rs  cli.rs  grammar.rs  mcp.rs  merging.rs  mod.rs  operations.rs  rendering.rs  reviews.rs  schemata.rs  validation.rs  worknotes.rs
