[package]
name = "nbspec"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Notebook-first OpenSpec orchestration for spec-driven development"
license = "Apache-2.0"
repository = "https://github.com/emcd/nbspec"
homepage = "https://github.com/emcd/nbspec"
documentation = "https://docs.rs/nbspec"
readme = "README.md"
keywords = ["openspec", "nb", "notes", "specs", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[[bin]]
name = "nbspec"
path = "src/main.rs"

[dependencies]

[workspace]
