[package]
name = "nbspec"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Notebook-first OpenSpec orchestration for spec-driven development"
license = "Apache-2.0"
repository = "https://github.com/emcd/nbspec"
homepage = "https://github.com/emcd/nbspec"
documentation = "https://docs.rs/nbspec"
readme = "README.md"
keywords = ["openspec", "nb", "notes", "specs", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[[bin]]
name = "nbspec"
path = "src/main.rs"

[dependencies]
# nb API primitives
nb-api = "0.1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime (nb-api client methods are async)
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"

# Timestamps for the meta note control plane
jiff = { version = "0.2", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[workspace]
