[package]
name = "nbspec"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Notebook-first OpenSpec orchestration for spec-driven development"
license = "Apache-2.0"
repository = "https://github.com/emcd/nbspec"
homepage = "https://github.com/emcd/nbspec"
documentation = "https://docs.rs/nbspec"
readme = "README.md"
keywords = ["openspec", "nb", "notes", "specs", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/.fable",
]

[[bin]]
name = "nbspec"
path = "src/main.rs"

[dependencies]
# nb API primitives
nb-api = "0.2.1"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime (nb-api client methods are async)
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# JSON schema for MCP tool argument surfaces (rmcp derives JSON Schema
# from tool arg structs).
schemars = "1.0"

# MCP server framework; macros and the tool-router are default
# features; `transport-io` enables the stdio transport used by
# the `nbspec serve mcp` subcommand.
rmcp = { version = "1.7.0", features = ["transport-io"] }

# Platform configuration directories
directories = "6.0"

# Timestamps for the meta note control plane
jiff = { version = "0.2", features = ["serde"] }

# Provenance content hashes
sha2 = "0.10"

# Unified diffs for review output
similar = "2.6"

# Merge-time change archives
tar = "0.4"
zstd = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[workspace]
